# manage_your_own_memory

./: .clang-format  CMakeLists.txt  README.md
00_pointer/: CMakeLists.txt  main.cpp
01_array/: CMakeLists.txt  main.c
02_variable_location/: CMakeLists.txt  main.c
03_c/: CMakeLists.txt  main.c
04_cpp/: CMakeLists.txt  main.cpp
05_tools/: CMakeLists.txt  debug_new_main.cpp  main.cpp
LICENSES/: CC-BY-4.0.txt  MIT.txt
images/: logo.svg.license
